<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/deviceRowItemHeight"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="2dp">

    <Button
        android:id="@+id/buttonTopicItemBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="false"
        android:elevation="-2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/topicItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:elevation="0dp"
        android:text="@string/topic_name_placeholder"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/topicDeviceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="8dp"
        android:elevation="0dp"
        android:text="@string/device_name_placeholder"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/topicItemName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/topicReading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:singleLine="false"
        android:text="@string/reading_value_placeholder"
        android:textSize="24sp"
        android:elevation="0dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/topicReadingTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/topicDeviceName"
        app:layout_constraintTop_toBottomOf="@+id/topicDeviceName" />

    <TextView
        android:id="@+id/topicReadingTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/reading_time_placeholder"
        android:textSize="12sp"
        android:elevation="0dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/topicReading" />

</androidx.constraintlayout.widget.ConstraintLayout>